kubernetes/cloudkart/09-cloudkart-service.yaml


apiVersion: v1
kind: Service
metadata:
  name: cloudkart-service
  namespace: cloudkart
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: cloudkart
