kubernetes/cloudkart/10-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudkart-ingress
  namespace: cloudkart
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: app.52.48.50.175.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudkart-service
            port:
              number: 80
  # Keep domain-based rule for when DNS is configured later
  - host: cloudkart.buildwithkanha.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudkart-service
            port:
              number: 80
